fixed mobile overflow

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -9,14 +9,6 @@ by Jason Costello, @jsncostello
 MeyerWeb Reset
 *******************************************************************************/
 
-html,body
-{
-    width: 100%;
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
-    overflow-x: hidden; 
-}
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -416,10 +408,61 @@ Full-Width Styles
     color: #60B0FF;
 }
 
+#site {
+  overflow-x: hidden;
+}
 
 
 /*******************************************************************************
 Small Device Styles
 *******************************************************************************/
 
+@media screen and (max-width: 480px) {
+  body {
+    font-size:14px;
+  }
 
+  #downloads {
+    display: none;
+  }
+
+  .inner {
+    min-width: 320px;
+    max-width: 480px;
+  }
+
+  #project_title {
+  font-size: 32px;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+
+  h2 {
+    font-size: 24px;
+  }
+
+  h3 {
+    font-size: 21px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  h5 {
+    font-size: 14px;
+  }
+
+  h6 {
+    font-size: 12px;
+  }
+
+  code, pre {
+    min-width: 320px;
+    max-width: 480px;
+    font-size: 11px;
+  }
+
+}
